# Bookshelf

./: .gitignore  .pre-commit-config.yaml  Books.py  Functionality.py  README.md  booksdata.json  catalog.py  changelog.md  chinook.db  dbfunctions.py  genres.txt  main.py  menu.py  pyproject.toml  requirements.txt  settings.py  temp.py  ui_mainscreen.py
.github/workflows/: python-app.yml
Data/: bookshelf.db
Tests/: log.html  output.xml  report.html  test_Main.robot
temp/: temp2.py
