[tool.poetry]
name = "bookshelf"
version = "0.2.3"
description = ""
authors = ["Sebastian Kupis <sebastian.kupis@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
robotframework = "^7.0"
pytest = "^8.0.1"
pyqt5 = "^5.15.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
